[workspace]
members = ["crates/*"]

[workspace.dependencies]
rumqttc = "0.24"
rumqttd = "0.19"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false }
config = "0.14.0"

[package]
name = "rs-mqtt"
version = "0.0.0"
edition = "2021"
resolver = "2"
