[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
config = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
rumqttc = "0.24"
rumqttd = "0.19"
rust-embed = "8.5.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false }
